# cfiles

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cf.c  cfiles.1  clearimg  config.h  displayimg
scripts/: clearimg  clearimg_uberzug  displayimg  displayimg_uberzug
user_scripts/: README.md  archive  extract  setwal
